--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/042/a/index.xhtml
@@ -54,8 +54,8 @@
                                 dataSource: salaryPerUnitPriceNames,
                                 columns: [
                                     {key:'index', length: 0, hidden: true},
-                                    {headerText: '#{i18n.getText('QMM039_13')}', key:'code', length: 3},
-                                    {headerText: '#{i18n.getText('QMM039_14')}', key: 'name', length: 3}
+                                    {headerText: '#{i18n.getText('QMM039_13')}', key:'code', length: 2},
+                                    {headerText: '#{i18n.getText('QMM039_14')}', key: 'name', length: 5,formatter: _.escape}
                                 ],
                                 value: salaryPerUnitPriceNamesSelectedCode,
                                 primaryText: 'name',
